--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "global-address-example",
+  "name": "smart-routing-address-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@zerodev/global-address": "^0.1.7",
+    "@zerodev/smart-routing-address": "^0.1.7",
     "dotenv": "^16.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
